# VersatileLog

./: README.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_peek.xml
app/src/main/res/layout-w1240dp/: app_bar_main.xml
checks/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
library_lint/: build.gradle
library_lint/src/main/: AndroidManifest.xml
library_log/: CMakeLists.txt  build.gradle  consumer-rules.pro
library_log/schemas/com.venson.versatile.log.database.LogDatabase/: 1.json  2.json  3.json  4.json
library_log/src/androidTest/java/com/venson/versatile/log/: ExampleInstrumentedTest.kt
library_log/src/main/: AndroidManifest.xml
library_log/src/main/cpp/: MD5.cpp  MD5.h  log-encrypt-lib.cpp  log-encrypt-lib.h
library_log/src/main/java/com/venson/versatile/log/: BaseLog.kt  InitialProvider.kt  KotlinExt.kt  LogEncryptJNI.kt  ProviderActivity.kt  VLog.kt  VLogExt.kt
library_log/src/main/java/com/venson/versatile/log/database/: LogDatabase.kt  LogEntity.kt
library_log/src/main/java/com/venson/versatile/log/database/dao/: HttpLogDao.kt  LogDao.kt
library_log/src/main/java/com/venson/versatile/log/database/entity/: HttpLogEntity.kt  LogEntity.kt
library_log/src/main/java/com/venson/versatile/log/interceptor/: LogInterceptor.kt
library_log/src/main/java/com/venson/versatile/log/print/: BasePrint.kt  DefaultPrint.kt  HTTPPrint.kt  JsonPrint.kt  XmlPrint.kt
library_log/src/main/java/com/venson/versatile/log/work/: DefaultExecutorSupplier.kt  MainThreadExecutor.kt  PriorityThreadFactory.kt  ZipDatabaseTask.kt
library_log/src/test/java/com/venson/versatile/log/: ExampleUnitTest.kt
(+26 files in other folders)
